Fix flickering the container.

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 80rem;
+  height: 50rem;
   gap: 2rem;
   padding: 6rem 0;
   border: 2px solid #222;
